update some table

--- a/index.html
+++ b/index.html
@@ -139,7 +139,51 @@
     </tr>
 
   </table>
+  
+    <h2 align="center" style="background-color:#069A8E;">Additional Qualification</h2>
+  <table  cellspacing="5" border="1px" align="center" style="border-collapse:collapse; text-align:center;">
+    <thead  style="background-color:#ECC117;">
+      <tr>
+        <th>Learned Skill</th>
+        <th>Learned Extreem</th>
+        <th>Frontend Familiar With </th>
+        <th>Backend Familiar With</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr  style="background-color:#A5EB50;">
+        <td  style="background-color:#ECC117;">Web Devlopment</td>
+        <td>Full Stack</td>
+        <td>
+           <ul>
+             <li>HTML</li>
+             <li>CSS</li>
+             <li>JAVASCRIPT</li>
+             <li>DOM</li>
+             <li>JQuery</li>
+           </ul>
+         </td>
+         <td>
+          <ul>
+            <li>Node.js</li>
+            <li>Express.js</li>
+            <li>EJS</li>
+            <li>APIs</li>
+
+
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>Mongoose</li>
+
+            <li>React.js</li>
+          </ul>
+         </td>
+      </tr>
+    </tbody>
+  </table>
+  
   <hr>
+
   <h1><a href="my-contact.html" target="_blank">My Contact Detailes
 
     </a></h1>
