--- a/my-hobbies.html
+++ b/my-hobbies.html
@@ -28,7 +28,7 @@
           <td>Net Surfing</td>
         </tr>
         <tr>
-          <td>IOS Devloper</td>
+          <td>Web Devloping</td>
         </tr>
         <tr>
           <td>Book Reading</td>
