--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   </table>
   
-    <h2 align="center" style="background-color:#069A8E;">Additional Qualification</h2>
+    <h2 align="center" style="background-color:#069A8E; color:white;">Additional Qualification</h2>
   <table  cellspacing="5" border="1px" align="center" style="border-collapse:collapse; text-align:center;">
     <thead  style="background-color:#ECC117;">
       <tr>
