--- a/my-contact.html
+++ b/my-contact.html
@@ -13,12 +13,12 @@
         <td>
           <h2 style="text-decoration:underline;">Address for Comunication:</h2>
           <p>Atul Singh s/o Mr. Indrasen Singh</p>
-          <p>Ward no. 50 Rajendra Pur South West Majnoo Ka Tila New Delhi <br>
-            Pin Code:223264
+          <p>Ward no. 9 , Shankargarh, Prayagraj U.P. <br>
+            Pin Code:212108
 
           </p>
           <h3 style="text-decoration:underline;">Contact No.:</h3>
-          <p>7509588743 , 9867453624</p>
+          <p>7509503216 , 7415651791</p>
 
           <h3 style="text-decoration:underline;">E-Mail:</h3>
           atulsinghsrj@gmail.com
