--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </td>
       <td>
         <h1>Atul Singh</h1>
-        <p>Mechanical Engineer</p </td>
+        <p>Mechanical Engineer</p >
+          <p>Full Stack Web Devloper</p >
+      </td>
     </tr>
   </table>
 
